@@ -1,3 +1,8 @@
+(02/10/19)
+==========
+
+· Add Games > Diablo 1
+
 (27/09/19)
 ==========
 
